tests/bad/question_not_ptr.ae
/// fail: Can only use ? on pointer types

def main() {
	let x = 50
	if x? {}
}